2009-02-26 Denton Woods <doomwiz@users.sf.net>
	* configure.ac, lib/Makefile.am, il.h, il_internal.h, il_ilbm.c, il_io.c: Added
	  patch from Ben Campbell for ILBM files at
	  https://sourceforge.net/tracker2/index.php?func=detail&aid=2635333&group_id=4470&atid=304470.
	* il_dpx.c / il_dpx.h: Added these files.
	
2009-02-25 Denton Woods <doomwiz@users.sf.net>
	* il_iwi.c:329: Changed IL_MAX parameter from 16 to 8 (copy+paste error).
	* WindowsTest.cpp: Added mipmap functionality to 0-9 keys (0 goes to main image).
	
2009-02-24 Denton Woods <doomwiz@users.sf.net>
	* vc9 Unicode projects: Changed settings to use x64 and x86 directories for .obj files.
	* test/in: Removed this directory.
	* Added "Test Images" to SVN.
	* il_dds.c (DecompressFloat): Added proper support for G16B16, G32B32, R16 and R32 images.

2009-02-23 Denton Woods <doomwiz@users.sf.net>
	* il_pnm.c: Fixed bug at https://sourceforge.net/forum/message.php?msg_id=6491617 -
	  Changed order of lines 448 and 450.

2009-02-22 Denton Woods <doomwiz@users.sf.net>
	* il_internal.h: Added IL_NO_EXTLIBS define.
	* il_dds-save.c: Removed unused variables.
	* ilu_mipmap.c: Finished redoing all mipmap functions.
	* ilu_mipmap.h: Removed this file.

2009-02-21 Denton Woods <doomwiz@users.sf.net>
	* ilu_mipmap.c: Redid mipmap functions to use iluScale functions instead of nearest.

2009-02-20 Matěj Týč <bubla@users.sf.net>
	* docs/Makefile.am,docs/Devil_manual.texi: Added new ILU images to the
	manual, set the manual license to GFDL.
	* testil, ilur: Licensed under GPL v3

2009-02-19 Denton Woods <doomwiz@users.sf.net>
	* windows_example\resources: Added DevIL Logo.ico, removed OpenIL Logo.ico.
	* windows_example\resource.h: Changed to use DevIL Logo.ico.
	* il_io.c (ilSaveL): Fixed bug where return type was cast to 1 byte.

2009-02-18 Denton Woods <doomwiz@users.sf.net>
	* configure.ac: Added descriptions of more image formats.
	* il_ftx.c (iLoadFtxInternal): Changed to load all FTX images as RGBA.
