@@ -266,6 +266,12 @@ ILboolean ilLoadDoomL(const void *Lump, ILuint Size);
 ILboolean ilLoadDoomFlat(ILconst_string FileName);
 ILboolean ilLoadDoomFlatF(ILHANDLE File);
 ILboolean ilLoadDoomFlatL(const void *Lump, ILuint Size);
+ILboolean ilIsValidDpx(ILconst_string FileName);
+ILboolean ilIsValidDpxF(ILHANDLE File);
+ILboolean ilIsValidDpxL(const void *Lump, ILuint Size);
+ILboolean ilLoadDpx(ILconst_string FileName);
+ILboolean ilLoadDpxF(ILHANDLE File);
+ILboolean ilLoadDpxL(const void *Lump, ILuint Size);
 ILboolean ilIsValidExr(ILconst_string FileName);
 ILboolean ilIsValidExrF(ILHANDLE File);
 ILboolean ilIsValidExrL(const void *Lump, ILuint Size);
